[package]
name = "werewolf-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { version = "0.6.2", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.39"
